--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+#search {
+  display: flex;
+  justify-content: space-around;
+  width: 200px;
+  padding: 7px;
+  margin-left: 50%;
+  background-color: rgb(225, 194, 194);
+  border-radius: 25px;
+  text-align: center;
+
+}
+
+#search input {
+  border: none;
+  background: transparent;
+
+}
+
+#search span {
+  font-size: large;
+  cursor: pointer;
+}
+
+
+#card {
+  width: 15%;
+  height: 25vh;
+  text-align: center;
+  border: 2px solid black;
+  margin-top: 50px;
+  border-radius: 30px;
+  box-shadow: -20px 20px 50px;
+}
+
+#card legend {
+  background-color: black;
   color: white;
+  font-size: 20px;
+  border-radius: 100%;
+  float: right;
 }
 
-.App-link {
-  color: #61dafb;
+#card img {
+  width: 90%;
+  height: 80%;
+  margin: 2%;
+  border-radius: 11%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#btn {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 100px;
+  height: 100px;
+  box-shadow: 20px 20px 30px;
+}
+
+#btn button {
+  background-color: blue;
+  color: white;
+  border-radius: 10px;
+  padding: .7rem.6rem;
+  cursor: pointer;
+  font-style: oblique;
+  height: 80%;
+  width: 15%;
+  box-shadow: -10px 10px 10px black;
 }
